# guilded-announcer

./: .gitignore  Cargo.toml  config.toml
src/: main.rs
