[package]
name = "guilded-announcement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rustls = "0.17.0"
toml = "0.8.12"
awc = { version = "3.4.0", features=["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
